# mpd-rich-presence-discord

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  DiscordPresenceRpc.cpp  DiscordPresenceRpc.h  LICENSE  MpdClient.h  README.md  TrackInfo.h  build.sh  main.cpp  mpd-discord.service
assets/discord/: makePng.sh
src/: MpdClient.cpp  MpdClient.h  main.cpp
